# Totally-Not-Skynet

./: .gitignore  nginx.conf  package-lock.json  package.json  readme.md  send_reset.py  server_reset.py  update_db.py
.github/workflows/: reset.yml
backend/: Cargo.toml  allowed_emails.txt  auth.db  build.rs  db_file  nohup.out  old_db_file  req_env_vars.txt  system_object_storage.db
backend/src/: check_if_docker_installed.rs  check_installed_programs.rs  domain.rs  env_vars_checker.rs  graph.rs  main.rs  mongo.rs  openai.rs  receive_send.rs  req_env_vars.txt  send.rs  settings.rs  sqlite_helper_functions.rs  utils.rs  websocket.rs
backend/src/actions/: codeDescription.json  softwareArchitect.json
common/protobuf/: system_types.proto
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--7449182997600620898.wt  collection-0-5312414674418467061.wt  collection-2-5312414674418467061.wt  collection-4-5312414674418467061.wt  collection-7-5312414674418467061.wt  collection-9-5312414674418467061.wt  index-1--7449182997600620898.wt  index-1-5312414674418467061.wt  index-10-5312414674418467061.wt  index-2--7449182997600620898.wt  index-3-5312414674418467061.wt  index-5-5312414674418467061.wt  index-6-5312414674418467061.wt  index-8-5312414674418467061.wt  sizeStorer.wt
data/diagnostic.data/: metrics.2023-04-08T13-11-54Z-00000  metrics.2023-04-15T13-02-35Z-00000  metrics.2023-04-23T13-09-24Z-00000  metrics.2023-04-30T16-46-49Z-00000  metrics.2023-05-06T14-34-41Z-00000  metrics.2023-05-08T22-45-54Z-00000  metrics.2023-05-16T22-39-07Z-00000  metrics.2023-05-18T21-42-36Z-00000  metrics.interim
env/: pyvenv.cfg
example_code/: Cargo.toml  graph.dot  modified_graph.dot  original_graph.dot  subgraph.dot  subgraph_0.dot  subgraph_3.dot
example_code/src/: main.rs
frontend/: .eslintrc.json  build-protos.sh  package-lock.json  package.json  proto_build.sh  rollup.config.js  server.js  tsconfig.json
frontend/.svelte-kit/: ambient.d.ts  tsconfig.json
frontend/public/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  global.css  index.html
frontend/src/: .eslintrc.json  App.svelte  OUTPUT_CSS_FILE.css  file.py  global.css
frontend/src/components/: AuthPage.svelte  GraphComponent.svelte  GraphComponent_graphlib.svelte  GraphStyles.ts  Loading.svelte  NodeInfo.svelte  RightSidebar.svelte  Sidebar.svelte
frontend/src/helper_functions/: authentication.ts  graph.ts  misc.ts  type_checker.ts  validation.ts  websocket.ts
frontend/src/stores/: aiSystemStore.ts  executionStore.ts  graphStore.ts  systemStateStore.ts  websocketStore.ts
frontend/src/system_types/: index.d.ts  index.ts
frontend2/: rollup.config.js
frontend2/src/components/: GraphComponent.svelte  GraphStyles.ts  Sidebar.svelte
frontend2/src/stores/: graphStore.ts
mongodump/admin/: nodes.bson  nodes.metadata.json  system.users.bson  system.users.metadata.json  system.version.metadata.json
old_backend/: output.txt
old_backend/src/: helper_functions.rs
productivity_increasing_scripts/: exclusion_folders.txt  file_tree.txt  openai_completion.py  summarize_project.py
skynet/: Cargo.toml  output.json  output.txt  project_goals.txt
skynet/src/: helper_functions.rs  main.rs  test.json
skynet/src/actions/: actionChooser.json  developers.json
skynet/src/processes/: write_code.json
skynet/src/prompts/: developers.txt  fixErrors.txt  softwareArchitect.txt  teamLead.txt  terminalInteraction.txt
skynet/src/roles/: actionChooser.json  breakDownTask.json  codeDescription.json  developers.json  expandUponGoal.json  fixErrors.json  softwareArchitect.json  teamLead.json  terminalInteraction.txt
skynet2/: Cargo.toml
skynet2/src/: main.rs
skynet2/src/actions/: fixErrors.json
(+38 files in other folders)
