[package]
name = "skynet2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
bson = "2.6.1"
clap = { version = "4.2.4", features = ["derive"] }
crossbeam-channel = "0.5.7"
futures-util = "0.3.28"
mongodb = "2.4.0"
reqwest = "0.11.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.18.0"
uuid = "1.3.0"
walkdir = "2.3.3"
dotenv = "0.15.0"
anyhow = "1.0"
thiserror = "1.0"
prost = "0.12.1"
prost-types = "0.12.1"
base64 = "0.21.2"
rusqlite = "*"
r2d2 = "*"
r2d2_sqlite = "*"
colored = "2.0.4"
log = "0.4.20"
env_logger = "0.10.0"
bytes = "1.5.0"


[build-dependencies]
prost-build = "0.12.1"
