[package]
name = "skynet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.7.0"
bevy = "0.9.1"
bevy-tokio-tasks = "0.9.3"
bevy_tasks = "0.9.1"
bevy_time = "0.9.1"
bollard = "0.14.0"
clap = { version = "4.1.4", features = ["derive"] }
either = "1.8.1"
futures-lite = "1.12.0"
iyes_loopless = { version = "0.9.1", features = ["fixedtimestep"] }
nom = "7.1.3"
