[package]
name = "skynet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-openai = "0.7.0"
bevy = "0.9.1"
bevy-tokio-tasks = "0.9.3"
bevy_tasks = "0.9.1"
bevy_time = "0.9.1"
bollard = "0.14.0"
clap = { version = "4.1.4", features = ["derive"] }
cpal = "0.15.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"]}
crossbeam-channel = "0.5.7"
either = "1.8.1"
futures-lite = "1.12.0"
hound = "3.5.0"
iyes_loopless = { version = "0.9.1", features = ["fixedtimestep"] }
json = "0.12.4"
nom = "7.1.3"
regex = "1.7.1"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
serpapi-search-rust = "0.1.1"
tar = "0.4.38"
tokio = "1.26.0"
